# admin_assistant

./: .env  .gitignore  .pre-commit-config.yaml  dev.py  pyproject.toml
app/: main.py
app/api/v1/: routes.py
app/core/: config.py
tests/: test_api.py
