[project]
name = "admin-assistant"
version = "0.1.0"
description = "Admin Assistant Project"
authors = [
    {name = "Vasyl Radashev",email = "vasiliyradashev24@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "motor (>=3.7.1,<4.0.0)",
    "alembic (>=1.17.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pre-commit = "^4.4.0"
black = "^25.9.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
ruff = "^0.14.4"
mypy = "^1.18.2"
httpx = "^0.28.1"

[tool.poetry]
packages = [{ include = "app" }]

[project.scripts]
dev = "uvicorn:main"
